Prevent mobile table td collapsing issue Fixes https://github.com/openshift/origin-web-console/issues/1128

--- a/app/styles/_variables.less
+++ b/app/styles/_variables.less
@@ -16,6 +16,8 @@
 @navbar-pf-alt-navbar-brand-padding: 20px 0;
 @navbar-pf-bg-color: @navbar-os-bg-color;
 @sidebar-pf-bg: @body-bg;
+@table-cell-padding-bottom: 8px;
+@table-cell-padding-top: 8px;
 
 
 // OpenShift Console specific
